force-app/main/default/objects/Pricing_Approver__c/Pricing_Approver__c.object-meta.xml
<CustomObject>
    <label>Pricing Approver</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Pricing Approver Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Approvers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>