force-app/main/default/objects/Pricing_Approver__c/fields/Pricing_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Matrix__c</fullName>
    <label>Pricing Matrix</label>
    <referenceTo>Pricing_Matrix__c</referenceTo>
    <relationshipLabel>Pricing Approvers</relationshipLabel>
    <relationshipName>Pricing_Approvers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>